fix: deploy from dist, wrap text correctly, correct comment

--- a/src/Profile/Profile.module.css
+++ b/src/Profile/Profile.module.css
@@ -15,6 +15,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .line {
